# toudan

./: .gitignore  README.md  keywords.csv  main.py  pyproject.toml
.github/workflows/: schedule.yml  test.yml
tests/: test_connpass.py
toudan/: connpass.py  entity.py  slack.py
